--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+
+.instaBorder {
+  border-style: solid;
+  border-width: 4px 0 0 0;
+  border-image: linear-gradient(to right, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5) 1 0 0;
+}
+
+.toggleBackground {
+  background: linear-gradient(to right, #007bff, #00ff80);
+}
+
+
