--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,7 @@
 }
 
 
+.peer:checked ~ .peer-checked\:bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
